[css] fixup dark mode

--- a/www.jxck.io/assets/css/body.css
+++ b/www.jxck.io/assets/css/body.css
@@ -50,7 +50,7 @@
   --anchor-color: RoyalBlue;
   --anchor-visited-color: Brown;
 
-  --code-block: #efefef;
+  --code-block: #f1f5f9;
   --code-block-font: #222;
 
   --block-quote: #ddd;
@@ -85,13 +85,14 @@
 /* Dark Mode Theme */
 @media (prefers-color-scheme: dark) {
   :root {
-    --background-color: #010101;
+    --header-color: #111;
+    --background-color: #222;
     --font-color: #eee;
 
     --anchor-color: CornflowerBlue;
     --anchor-visited-color: RosyBrown;
 
-    --code-block: #efefef;
+    --code-block: #ccc;
 
     --table-border: #eee;
   }
