--- a/www.jxck.io/assets/css/mozaic.css
+++ b/www.jxck.io/assets/css/mozaic.css
@@ -1,27 +1,28 @@
 :root {
-  --font-color: black;
-  --background-color: white;
-  --header-color: black;
-  --heading-font-color: white;
+  --font-color: #111;
+  --background-color: #fff;
+  --header-color: #000;
+  --heading-font-color: #fff;
   --heading-back-color: #333;
-  --border-color: black;
+  --border-color: #000;
   --player-color: #333;
 
   --ui-back: #888;
-  --ui-front: white;
+  --ui-front: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --font-color: white;
-    --background-color: black;
-    --header-color: #333;
-    --heading-font-color: white;
-    --heading-back-color: #333;
-    --border-color: white;
+    --font-color: #eee;
+    --background-color: #333;
+    --header-color: #000;
+    --heading-font-color: #fff;
+    --heading-back-color: #111;
+    --border-color: #fff;
+    --player-color: #030303;
 
     --ui-back: #888;
-    --ui-front: white;
+    --ui-front: #fff;
   }
 }
 
@@ -255,7 +256,7 @@ portal#preview {
   transition:       transform 0.3s;
   transform-origin: right bottom;
   background-image:    url("/assets/img/portal-preview.png");
-  background-color:    white;
+  background-color:    #fff;
   background-size:     contain;
   background-repeat:   no-repeat;
   background-position: center;
