--- a/www.jxck.io/assets/css/pre.css
+++ b/www.jxck.io/assets/css/pre.css
@@ -108,85 +108,8 @@ pre > code::after {
 .hljs-bullet {
 }
 
-
 @media (prefers-color-scheme: dark) {
-  .hljs-keyword {
-    color: #000;
-    font-weight: bold;
-    font-style: italic;
-  }
-
-  .hljs-number {
-    color: var(--code-block-font);
-  }
-
-  .hljs-built_in {
-    color: #000;
-    font-weight: bold;
-  }
-
-  .hljs-literal {
-    color: var(--code-block-font);
-    font-weight: bold;
-  }
-
-  .hljs-regexp {
-    color: var(--code-block-font);
-  }
-
-  .hljs-comment {
-    color: #888;
-  }
-
-  .hljs-tag {
-    color: var(--code-block-font);
-    font-weight: bold;
-  }
-
-  .hljs-strong {
-    font-weight: bold;
-  }
-
-  .hljs-attribute {
-  }
-
-  .hljs-attr {
-    color: var(--code-block-font);
-    font-weight: bold;
-  }
-
-  .hljs-selector-tag {
-    color: var(--code-block-font);
-  }
-
-  .hljs-subst {
-    font-weight: bold;
-  }
-  .hljs-symbol {
-    font-weight: bold;
-  }
-
-  .hljs-section {
-  }
-
-  .hljs-meta,
-  .hljs-meta-keyword,
-  .hljs-selector-id,
-  .hljs-selector-class,
-  .hljs-selector-pseudo,
-  .hljs-variable,
-  .hljs-title,
-  .hljs-string,
-  .hljs-name,
-  .hljs-type,
-  .hljs-selector-attr {
-    color: var(--code-block-font);
-  }
 }
-
-
-
-
 
 
 
@@ -201,6 +124,9 @@ pre > code::after {
 .hljs-deletion,
 .hljs-meta-string,
 .hljs-emphasis {
-  /** if you find element applyed this style, please tell me https://github.com/jxck/jxck.io/issues **/
+  /** 🙏🙏🙏
+   * if you find element applyed this style, that's a bug.
+   * please tell me https://github.com/jxck/jxck.io/issues
+   **/
   font-size: 100em;
 }
